コード記入

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -15,21 +15,23 @@
 1から4のかずをランダムにせってい。<br>
 わかりやすいように1から4のかずにマークをつけてあげよう。
 
-<div class=ichigojam></div>
+<div class=ichigojam>10 A=RND(4)+1
+20 ?"SELECT ♥=1 ♦=2 ♣=3 ♠=4"</div>
 
 </section>
     
 
 <section>
 どんなマーク？
-<div class=ichigojam></div>
+<div class=ichigojam>30 INPUT "MARK?",B</div>
 
-あたったら、つぎはすうじをあてるよ。
-すうじをあてるぎょうにとぶ。
-<div class=ichigojam>
+あたったら、すうじをあてるぎょうにとぶ。
+    <div class=ichigojam>40 IF B=A GOTO80</div>
 はずれたら、ざんねん！もういちど！
-さいしょのぎょうにもどって、すぐにさいチャレンジできるようになるよ。
-<div class=ichigojam>
+さいしょのぎょうにもどって、すぐにさいチャレンジできるようにする。
+<div class=ichigojam>50 IF B!=A ?"WRONG!AGAIN!"
+60 WAIT120
+    70 GOTO10</div>
 </section>
 
 
@@ -38,22 +40,26 @@
 すうじをあてよう！
     
 マークとおなじように、1から13のかずをせってい。
-<div class=ichigojam>
+<div class=ichigojam>80 C=RND(13)+1
 </div>
 どんなすうじ？
-<div class=ichigojam>
+    <div class=ichigojam>90 INPUT "NUMBER?",D</div>
 
 あたったらクリア！おめでとう！
 はずれたら、おしい！もういちど！
-<div class=ichigojam>
+<div class=ichigojam>100 IF D=C ?"CLEAR!"
+    110 IF D!=C ?"CLOSE!AGAIN!"</div>
 さいしょにもどろう。
-<div class=ichigojam>
+<div class=ichigojam>120 WAIT120
+    130 GOTO10</div>
+
 </section>
 
 <section>
 なかなかあたらない！じゃあヒントをつけてみよう。
-マークがあかいろ(つまり1か2)なら"RED"、くろいろ(つまり3か4)なら"BLACK"とひょうじ。
-<div class=ichigojam></div>
+マークがあか(つまり1か2)なら"RED"、くろ(つまり3か4)なら"BLACK"とひょうじ。
+<div class=ichigojam>25 IF A<=2 ?"HINT:RED"
+26 IF A>=3 ?"HINT:BLACK"</div>
 </section>
 
 
