--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -53,18 +53,12 @@
 
 
       
-<section>
-ヒントをつけてみよう。<br>
-マークがあか(1か2)なら"RED"、くろ(3か4)なら"BLACK"とひょうじ。
-<div class=ichigojam>25 IF A<=2 ?"HINT:RED"
-26 IF A>=3 ?"HINT:BLACK"</div>
-</section>
 
 
 <section>
 <b>やってみよう！</b><br>
 1. 15ぎょうめにCLSといれるとどうなるかな？<br>
-2. すうじにもヒントをつけてみよう<br>
+2. マークとすうじにヒントをつけてみよう<br>
 3. ヒントをひょうじするかしないかえらべるようにしてみよう<br>
 4. 【むずかしい】クリアしたときにあてたカードをひょうじしてみよう<br>
 5. 【むずかしい】さいチャレンジをしゅどうでおこなえるようにしてみよう<br>
