--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -10,7 +10,7 @@
 <section>
 あいてがなんのトランプをひいたかあててみよう！まずはマーク！<br>   
 1から4のかずをランダムにせってい。<br>
-わかりやすいように1から4のかずにマークをつけてあげよう。
+わかりやすいように、それぞれのかずにマークをつけてあげよう。
 <div class=ichigojam>10 A=RND(4)+1
 20 ?"SELECT ♥=1 ♦=2 ♣=3 ♠=4"</div>
 
@@ -23,7 +23,7 @@
 <div class=ichigojam>30 INPUT "MARK?",B</div>
 
 あたったら、すうじをあてるぎょうにとぶ。<br>
-はずれたら、ざんねん！もういちど！<br>
+はずれたら、ざんねん！さいチャレンジ！<br>
     <div class=ichigojam>40 IF B=A GOTO80
 50 IF B!=A ?"WRONG!AGAIN!"
 60 WAIT120
@@ -34,15 +34,13 @@
    
     
 <section>
-つぎはすうじ！<br>
-マークとおなじように、1から13のかずをせってい。
+つぎはすうじ！マークとおなじように、1から13のかずをせってい。
 <div class=ichigojam>80 C=RND(13)+1
 </div>
 どんなすうじ？
     <div class=ichigojam>90 INPUT "NUMBER?",D</div>
 
-あたったらクリア！おめでとう！<br>
-はずれたら、おしい！もういちど！
+あたったらクリア！はずれたら、おしい！もういちど！
 <div class=ichigojam>100 IF D=C ?"CLEAR!"
 110 IF D!=C ?"CLOSE!AGAIN!"</div>
 さいしょにもどろう。
@@ -51,17 +49,13 @@
 
 </section>
 
-
-      
-
-
+  
 <section>
 <b>やってみよう！</b><br>
 1. 15ぎょうめにCLSといれるとどうなるかな？<br>
 2. マークとすうじにヒントをつけてみよう<br>
 3. ヒントをひょうじするかしないかえらべるようにしてみよう<br>
 4. 【むずかしい】クリアしたときにあてたカードをひょうじしてみよう<br>
-5. 【むずかしい】さいチャレンジをしゅどうでおこなえるようにしてみよう<br>
 
 </section>
 
