--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,6 @@ body {
 
 <div id="main">
 <section>
-- <a href=TEST.html>テスト TEST</a><br>
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
@@ -109,6 +108,7 @@ body {
 - <a href=VISUAL-KUKU.html>九九ゲーム</a><br>
 - <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
 - <a href=WHATDAY.html>なんようびうまれ？</a><br>
+- <a href=CARDS.html>なんのカード？</a><br>
 - <a href=FLOPPY.html>FLOPPY BIRD GAME</a><br>
 </section>
 </div>
