お手本コードに順番決め数字を追加　順番決めの説明追加

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -9,15 +9,16 @@
 
 <section>
 気持ちを乗せて、書いていく！
-<div class=ichigojam>LC 10,9:?"LOVE LETTER"</div>
+<div class=ichigojam>10 LC 10,9:?"LOVE LETTER"</div>
 文のタイトルを書こう<br>
-さいしょの10,9で位置決め<br>
+最初の10で書いたコードの動く順番を決める<br>    
+LCの後のの10,9で位置決め<br>
 その後にタイトルを書く
 </section>
     
 
 <section>
-<div class=ichigojam>IF INKEY()=0 CONT</div>
+<div class=ichigojam>20 IF INKEY()=0 CONT</div>
 ボタンを押したら次に進むようにしてあげる
 </section>
 
@@ -31,7 +32,7 @@
 
 <section>
 どんどん書いていくよ！
-<div class=ichigojam>LC 10,10:?"ずっと前から…"
+<div class=ichigojam>30 LC 10,10:?"ずっと前から…"
 </div>
 </section>
 
