--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -25,22 +25,23 @@ LCの後のの10,9で位置決め<br>
 
 <section>
 ページの最後にこのコードをいれることでボタンで進むようになるよ
-<div class=ichigojam>LC 10,10:?"イチゴジャムさんへ"
+<div class=ichigojam>30 LC 10,10:?"ICHIGOJAM SANHE"
 </div>
 伝えたい内容を考えて、書いてみよう！
 </section>
 
 <section>
 どんどん書いていくよ！
-<div class=ichigojam>30 LC 10,10:?"ずっと前から…"
+<div class=ichigojam>40 LC 10,10:?"ZUTTO MAE KARA"
 </div>
 </section>
 
 <section>
 <b>最後に</b><br>
-1. 最後のページは、もちろんあの言葉！<br>
-2. 出来上がったら焦らずに、RUNを押して確認だ！<br>
-3. 最終確認が終わったらichigoDakeを渡そう！<br>
+1.
+２. 最後のページは、もちろんあの言葉！<br>
+３. 出来上がったら焦らずに、RUNを押して確認だ！<br>
+４. 最終確認が終わったらichigoDakeを渡そう！<br>
 </section>
     
 </body></html>
