--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -12,7 +12,7 @@
 <div class=ichigojam>10 LC 10,9:?"LOVE LETTER"</div>
 文のタイトルを書こう<br>
 最初の10で書いたコードの動く順番を決める<br>    
-LCの後のの10,9で位置決め<br>
+LCの後の10,9で位置決め<br>
 その後にタイトルを書く
 </section>
     
