「最後に」加筆

--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -38,7 +38,7 @@ LCの後の10,9で位置決め<br>
 
 <section>
 <b>最後に</b><br>
-1.
+1.コードが動かしたい順番になってるか確認！<br>
 ２. 最後のページは、もちろんあの言葉！<br>
 ３. 出来上がったら焦らずに、RUNを押して確認だ！<br>
 ４. 最終確認が終わったらichigoDakeを渡そう！<br>
