ファイル名変更、indexに追加

--- a/ja/LETTER.html
+++ b/ja/LETTER.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>思いの伝え方</title>
+<title>思いを伝えてみよう！</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -38,10 +38,10 @@ LCの後の10,9で位置決め<br>
 
 <section>
 <b>最後に</b><br>
-１.コードが動かしたい順番になってるか確認！<br>
+１. コードが動かしたい順番になってるか確認！<br>
 ２. 最後のページは、もちろんあの言葉！<br>
 ３. 出来上がったら焦らずに、RUNを押して確認だ！<br>
-４. 最終確認が終わったらichigoDakeを渡そう！<br>
+４. 最終確認が終わったらIchigoDakeを渡そう！<br>
 </section>
     
 </body></html>
