--- a/ja/index.html
+++ b/ja/index.html
@@ -109,6 +109,7 @@ body {
 - <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
 - <a href=WHATDAY.html>なんようびうまれ？</a><br>
 - <a href=FLOPPY.html>FLOPPY BIRD GAME</a><br>
+- <a href=LETTER.html>思いを伝えてみよう！</a><br>
 </section>
 </div>
 
