--- a/ja/DRAW.html
+++ b/ja/DRAW.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>がめんにいたずらしてみよう！ DRAW</title>
 <link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ja/ichigojamlist.css">
 </head><body>
 
-<h1>がめんにいたずらしてみよう！　DRAW</h1>
-
+<h1>がめんにいたずらしてみよう！ DRAW</h1>
 
 <section>
 がめんにせんをかいてみよう！
@@ -14,7 +13,6 @@ DRAWコマンドでせんをかくことができるよ
 さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
 </section>
-    
 
 <section>
 ばしょのつぎに0とくわえると、せんをけせるよ。
@@ -22,10 +20,9 @@ DRAWコマンドでせんをかくことができるよ
 うえのほうのもじがきえたかな？
 </section>
 
-
 <section>
 FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
+<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,I*10,70:NEXT
 </div>
 RUNでじっこうしてみると、どうなるかな？
 </section>
@@ -33,9 +30,8 @@ RUNでじっこうしてみると、どうなるかな？
 <section>
 FORコマンドをふたつかいて＃をかいてみよう！
 <div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,I*5:NEXT</div>
 </section>
-
 
 <section>
 <b>やってみよう！</b><br>
