--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>ねこちゃんゲット</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>がめんにいたずらしてみよう！　DRAW</h1>
+<h1>ねこちゃんゲット</h1>
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+ねこちゃんゲットしちゃおう！
+ホントはボタン（？）キーボード（？）をねこちゃんの時に押したらゲットできるよ！（を作りたかったです。すみません！！！）
+<div class=ichigojam></div>
+まずは4つ！！ねこちゃん、いちご、ufo,宇宙人！！！<br>
+ランダム４してみる<br>
+ねこちゃん０、いちご１、ufo2,宇宙人３。
+    waitでちょっと待つ
 </section>
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
+。
+<div class=ichigojam>gotoで永遠出るよ！！！！</div>
+（ここからできませんでした、、、）
+   
 </section>
 
 
@@ -40,9 +42,9 @@ FORコマンドをふたつかいて＃をかいてみよう！
 
 <section>
 <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. キャラ増やそう<br>
+2. キャラがいろんなところに出てくるには？？？？<br>
+3. 速度早めて難易度アップ？！<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
