--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -10,34 +10,32 @@
 <section>
 ねこちゃんゲットしちゃおう！
 ホントはボタン（？）キーボード（？）をねこちゃんの時に押したらゲットできるよ！（を作りたかったです。すみません！！！）
-<div class=ichigojam></div>
-まずは4つ！！ねこちゃん、いちご、ufo,宇宙人！！！<br>
-ランダム４してみる<br>
-ねこちゃん０、いちご１、ufo2,宇宙人３。
+<div class=ichigojam>　10 LET A,RND(4)
+    12 WAIT 5</div>
     waitでちょっと待つ
 </section>
     
 
 <section>
 。
-<div class=ichigojam>gotoで永遠出るよ！！！！</div>
-（ここからできませんでした、、、）
-   
+<div class=ichigojam>20 IF A=0 ?"🐱"
+30 IF A=1 ?"🍓"
+40 IF A=2 ?"🛸"
+50 IF A=3 ?"👾</div>
+まずは4つ！！ねこちゃん、いちご、ufo,宇宙人！！！<br>
+ランダム４してみる<br>
+ねこちゃん０、いちご１、ufo2,宇宙人３。   
 </section>
 
 
 <section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
-</div>
+GOTO１０で...?
+<div class=ichigojam>52  GOTO10</div>
 RUNでじっこうしてみると、どうなるかな？
+    (ここまでしかできませんでした、、、）
 </section>
 
-<section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
-</section>
+
 
 
 <section>
