--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,7 +4,7 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>サクサククッキーをつくってみよう！</h1><br>
+<h1>ハイアンドロー</h1><br>
 
 <section>
 <h1>＊材料＊</h1>
