--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -7,11 +7,9 @@
 <h1>ハイアンドロー</h1><br>
 
 <section>
-<h1>＊材料＊</h1>
-    
-    
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
+BのかずはAよりおおきいか、ちいさいかをあてるゲーム！
+まずは0~9のらんすうを2つつくろう！
+<div class=ichigojam>LET A,RND(10)</div>
 ２つばしょをしていしてあげよう<br>
 さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
