--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -10,6 +10,7 @@
 BのかずはAよりおおきいか、ちいさいかをあてるゲーム！
 まずは0~9のらんすうを2つつくろう！
 <div class=ichigojam>LET A,RND(10)</div>
+<div class=ichigojam>LET B,RND(10)</div>
 ２つばしょをしていしてあげよう<br>
 さいしょの1,1でさいしょのばしょ。<br>
 つぎの70,70,でつぎのばしょをしていしよう。
