--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,7 +4,7 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>High&low</h1><br>
+<h1>High&Low</h1><br>
 
 <section>
 BのかずはAよりおおきいか、ちいさいかをあてるゲーム！<br>
