--- a/ja/index.html
+++ b/ja/index.html
@@ -24,7 +24,6 @@ body {
 <div id="main">
 <section>
 プログラミング コース<br>
-- <a href=TEST.html>テスト test</a><br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
 - <a href=RUN-LIST.html>プログラムのきおく RUN/LIST</a><br>
@@ -97,6 +96,7 @@ body {
 
 <section>
 じっくりうちこみ コース<br>
+- <a href=High&Low.html>High&Low</a><br>
 - <a href=KAWAKUDARI.html>かわくだりゲーム</a><br>
 - <a href=JUMP.html>ジャンプゲーム</a><br>
 - <a href=JANKEN.html>ジャンケンゲーム</a><br>
