remove a link of pdf

--- a/ja/index.html
+++ b/ja/index.html
@@ -126,9 +126,7 @@ body {
 English: <a href="https://ichigojam.github.io/print/en/">IchigoJam print @en</a> https://ichigojam.github.io/print/en/ <br>
 Japanese: <a href="https://ichigojam.github.io/print/ja/">IchigoJam print @ja</a> https://ichigojam.github.io/print/ja/ <br>
 licence: <a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
-Src: <a href=https://github.com/IchigoJam/print>IchigoJam print on GitHub</a><br>
+src: <a href=https://github.com/IchigoJam/print>IchigoJam print on GitHub</a><br>
 </div>
-
-(<a href=http://ichigojam.net/print/IchigoJam-print.pdf>一括ダウンロードPDF</a>)<br>
 
 </body></html>
