--- a/ja/index.html
+++ b/ja/index.html
@@ -23,7 +23,7 @@ body {
 
 <div id="main">
 <section>
-	- <a href=Population_simulation.html>じんこうシミュレーション改</a><br> 
+	- <a href=Population_simulation.html>じんこうぶんぷ</a><br> 
 プログラミング コース<br>
 - <a href=LED.html>ひかりをあやつる LED</a><br>
 - <a href=WAIT.html>じかんをあやつる WAIT</a><br>
