--- a/ja/High&Low.html
+++ b/ja/High&Low.html
@@ -37,8 +37,10 @@ AとBにはどのかずがはいっていたかな・・・？<br>
 
 <section>
 つぎはせいかいなら「セイカイ！」まちがえていたら「ハズレ！」をひょうじさせよう！
-<div class=ichigojam>55 ?"B=";B</div> 
+<div class=ichigojam>70 IF D=1 ?"HIGH" ELSE ?"LOW"</div>
+<div class=ichigojam>80 IF C=D ?"セイカイ！" ELSE ?"ハズレ！"</div> 
 </section>
+    
     
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
