--- a/ja/High&Low.html
+++ b/ja/High&Low.html
@@ -14,7 +14,7 @@ BのかずはAよりおおきいか、ちいさいかをあてるゲーム！<br
 </section>
     
 <section>   
-「BのかずがAよりもおおきかったら１、ちいさかったら０をにゅうりょくする」というひょうじをさせよう！
+BのかずがAよりもおおきかったら１、ちいさかったら０をにゅうりょくする」というひょうじをさせよう！
 <div class=ichigojam>30 ?"B=";B ;" is A HIGH(1) OR LOW(0)?"</div>
 </section>
     
@@ -32,7 +32,7 @@ AとBのかずをひょうじさせよう！
 <section>
 AとBにはどのかずがはいっていたかな・・・？<br>
 つぎはにゅうりょくしたかずがhighかlowか、はんていできるようにしよう！
-<div class=ichigojam>60 IF A<B D=1 ELSE D=0</div>
+<div class=ichigojam>60 IF A<B D=1 ELSE D=0　</div>
 <div class=ichigojam>70 IF D=1 ?"HIGH" ELSE ?"LOW"</div>
 </section>
 
