--- a/ja/High&Low.html
+++ b/ja/High&Low.html
@@ -9,8 +9,8 @@
 <section>
 BのかずはAよりおおきいか、ちいさいかをあてるゲーム！<br>
 まずは0~10のランダムのかずを2つつくろう！
-<div class=ichigojam>LET A,RND(10)</div>
-<div class=ichigojam>LET B,RND(10)</div>
+<div class=ichigojam>10LET A,RND(10)</div>
+<div class=ichigojam>20LET B,RND(10)</div>
 </section>
     
 <section>   
