--- a/ja/Population_simulation.html
+++ b/ja/Population_simulation.html
@@ -5,53 +5,58 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>じんこうシミュレーション改</h1>
+<h1>じんこうぶんぷ</h1>
 
 
 <section>
-かみさまになったきぶんでじんこうのシミュレーションをしてみよう!<br>
+じんこうぶんぷをパーセントにしてみてみよう!<br>
     <br>
-せかいじんこうは、77おくにん。<br>
-１ねんでさいだい5600まんにんへって、さいだい6700まんにんふえました。<br>
-(せかいじんこうのすうちのさんこうさき　こくさいれんごうこうほうセンター　2019.7)<br>
-(へるさいだいすうのさんこうさき　せかいはなにでしぬのか　1996.8)<br>
-(ふえるさいだいすうのさんこうさき　こくさいれんごうこうほうセンター　2019.7)<br>
-
-<div class=ichigojam>10 P=770000
-20 D=RND(5600)
-30 U=RND(6700)</div>
-Pにじんこう、Dにへるかず、Uにふえるかずを「まんにん」をたんいとしてセット<br>
+にほんじんじんこうは1おく2373まんにん。<br>
+15さいみまんは1521まんにん。<br>
+15さい〜64さいは7507まんにん。<br>
+65さい〜74さいは3588まんにん。<br>
+75さいいじょうは1849まんにん。<br>
+（じんこうすいけい そうむしょうとうけいきょく 2019ねん10がつ）
+    
+<div class=ichigojam>
+10 A=12373
+20 B=1521
+30 C=7507
+40 D=3588
+50 E=1849
+</div>
+Aにそうじんこう、Bに15さいみまんのにんずう、Cに15さい〜64さいのにんずう、Dに65〜74さいのにんずう、Eに75さいいじょうのにんずうを「まんにん」をたんいとしてセット。<br>
  <br>
-2020年から100年後のじんこうは？<br>
+2019ねんのじんこうぶんぷは？<br>
 </section>
     
 
 <section>
-<div class=ichigojam>40 FOR Y=2020 TO 2120
-50 ?Y,P;
-60 ?
-70 P=P-D+U
-80 NEXT</div>
-グラフにしてみよう！
+<div class=ichigojam>
+60 PRINT B/(A/100)
+70 PRINT C/(A/100)
+80 PRINT D/(A/100)
+90 PRINT F/(A/100)
+</div>
+※ IchigoJamはしょうすうがつかえないからぶんぼを１００でわってけいさんするよ
 </section>
 
 
 <section>
-<div class=ichigojam>52 FOR I=0 TO P/1000
-55 ?"*";:NEXT
+<div class=ichigojam>
+51 INPUT A
+52 INPUT B
+53 INPUT C
+54 INPUT D
 </div>
 </section>
-
+けいさんけっかをがめんにひょうじするプログラムをくわえてかんせい！
 
 <section>
 <b>やってみよう！</b><br>
-1. ESCキーでとめて、2060ねんのじんこうをかくにんしてみよう<br>
-2. はるさいだいすうをかえてみよう<br>
-3. グラフのもじ”✴︎”をべつのもじにかえてみよう<br>
-4. 42ぎょう、わっている1000を100にかえてみよう<br>
-5. じんこうをへんこうしてみよう<br>
-6. まいとし1おくにんふえていくと？<br>
-7. じんこうをへるだけでなく、ふえるようにもしてみよう<br>
+1. どのけいさんけっかがどのねんだいなのかを、けいさんけっかのまえにひょうじしてみよう<br>
+2. けいさんけっかをがめんにひょうじするプログラムにとくていのもじをいれたら、そのもじにたいおうしたけいさんけっかがでるようにかいりょうしてみよう！<br>
+
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
