雛形再修正

--- a/ja/Population_simulation.html
+++ b/ja/Population_simulation.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>じんこうシミュレーション改</title>
+<title>じんこうぶんぷ</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
