< を エンコード

--- a/ja/High&Low.html
+++ b/ja/High&Low.html
@@ -32,7 +32,7 @@ AとBのかずをひょうじさせよう！
 <section>
 AとBにはどのかずがはいっていたかな・・・？<br>
 つぎはにゅうりょくしたかずがhighかlowか、はんていできるようにしよう！
-<div class=ichigojam>60 IF A<B D=1 ELSE D=0　</div>
+<div class=ichigojam>60 IF A&lt;B D=1 ELSE D=0　</div>
 <div class=ichigojam>70 IF D=1 ?"HIGH" ELSE ?"LOW"</div>
 </section>
 
