--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！　DRAW</title>
+<title>あなたのラッキーカラーをしろう！</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
@@ -8,33 +8,43 @@
 
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
+あなたのうまれたつきで
+ラッキーカラーをしることができるよ
+<div class=ichigojam>10 CLS:LC 10,12:?"ﾀﾝｼﾞｮｳﾂﾞｷｦｵｼｴﾃﾈ"</div>
+まずはタイトルがめんをつくろう<br>
+さいしょのCLS：LCでがめんをきれいにしよう。<br>
+？”のなかにしつもんないようをかこう！
 </section>
     
 
 <section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
+<div class=ichigojam>20 IF INKEY()=0 GOTO 20</div>
+なにかボタンをおすまではじまらないしくみだよ！
 </section>
 
 
 <section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,i*10,70:NEXT
+<div class=ichigojam>100 INPUT G
+110 ?"BIRTHDAYMONTH:";G
 </div>
-RUNでじっこうしてみると、どうなるかな？
+これでたんじょうづきがおされるとひょうじされるよ。
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,i*5:NEXT</div>
+1がつから１２がつまでのラッキーカラーをえらぼう！
+<div class=ichigojam>120 IF G=1 ?"ﾗｯｷｰｶﾗｰRED"
+130 IF G=2 ?"ﾗｯｷｰｶﾗｰORANGE"
+140 IF G=3 ?"ﾗｯｷｰｶﾗｰYELLOW"
+150 IF G=4 ?"ﾗｯｷｰｶﾗｰGREEN"
+160 IF G=5 ?"ﾗｯｷｰｶﾗｰBLUE"
+170 IF G=6 ?"ﾗｯｷｰｶﾗｰPURPLE"
+180 IF G=7 ?"ﾗｯｷｰｶﾗｰWHITE"
+190 IF G=8 ?"ﾗｯｷｰｶﾗｰBLACK"
+200 IF G=9 ?"ﾗｯｷｰｶﾗｰPINK"
+210 IF G=10 ?"ﾗｯｷｰｶﾗｰNAVY BLUE"
+220 IF G=11 ?"ﾗｯｷｰｶﾗｰGOLD"
+230 IF G=12 ?"ﾗｯｷｰｶﾗｰSILVER"
+</div>
 </section>
 
 
