--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -4,7 +4,7 @@
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>テストテスト　DRAW</h1>
+<h1>このときはこうなる　IF</h1>
 
 
 <section>
@@ -50,9 +50,8 @@
 
 <section>
 <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. ラッキーカラーだけじゃなくてアイテムなどもついかしてみよう！<br>
+2. ランダムにでてくるようにするにはどうしたらいいかな？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
