--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -6,8 +6,8 @@
 <h1>テスト　TEST</h1>
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
+今日のご飯は何かな？
+食べたいものを入力していこう！
 <div class=ichigojam>DRAW 1,1,70,70</div>
 ２つばしょをしていしてあげよう<br>
 さいしょの1,1でさいしょのばしょ。<br>
