--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -13,7 +13,7 @@
 40 IF INKEY()<>0 PRINT"ｶﾗｱｹﾞ":GOTO 60
 45 IF INKEY()<>0 PRINT"ｵﾆｷﾞﾘ":GOTO 60
 50 IF INKEY()<>0 PRINT"ﾗｰﾒﾝ":GOTO 60</div>
-<section>
+</section>
   
 <section>
 ランダムにメニューが表示される様にしよう<br>
