--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ja/ichigojamlist.css">
 </head><body>
 
-<h1>テスト　TEST</h1>
+<h1>オナカペコペコ</h1>
 
 <section>
 今日のご飯は何かな？
