--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -24,23 +24,16 @@
 </section>
 
 <section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,I*10,70:NEXT
-</div>
+メニューが表示されたあとはその都度リセットできる様にしよう
+<div class=ichigojam>90 GOTO 10</div>
 RUNでじっこうしてみると、どうなるかな？
 </section>
 
-<section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,I*5:NEXT</div>
-</section>
 
 <section>
-<b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+<b>食べルものが決まったら、さっそくお母さんのところへ行こう！</b><br>
+たまにプログラミングを見直してメニューを変えてみよう。<br>
+どんどん増やしてたくさんの料理を表示できる様にしてみよう。<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
