--- a/ja/TEST.html
+++ b/ja/TEST.html
@@ -32,8 +32,8 @@ RUNでじっこうしてみると、どうなるかな？
 
 <section>
 <b>食べルものが決まったら、さっそくお母さんのところへ行こう！</b><br>
-たまにプログラミングを見直してメニューを変えてみよう。<br>
-どんどん増やしてたくさんの料理を表示できる様にしてみよう。<br>
+たまにプログラミングを見直してメニューを変えてみよう。
+どんどん増やしてたくさんの料理を表示できる様にしてみよう。
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
