--- a/ONAKA-PEKOPEKO.html
+++ b/ONAKA-PEKOPEKO.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！ DRAW</title>
+<title>オナカペコペコ</title>
 <link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ja/ichigojamlist.css">
 </head><body>
 
