暗号のしくみ

--- a/ja/CRYPTOGRAPHY.html
+++ b/ja/CRYPTOGRAPHY.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>がめんにいたずらしてみよう！ DRAW</title>
+<title>ひみつのあんごうをつくってみよう！</title>
 <link rel="stylesheet" type="text/css" href="https://ichigojam.github.io/print/ja/ichigojamlist.css">
 </head><body>
 
-<h1>ががががが</h1>
+<h1>ひみつのあんごうをつくってみよう！</h1>
 
 <section>
-がめんにせんをかいてみよう！
-DRAWコマンドでせんをかくことができるよ
-<div class=ichigojam>DRAW 1,1,70,70</div>
-２つばしょをしていしてあげよう<br>
-さいしょの1,1でさいしょのばしょ。<br>
-つぎの70,70,でつぎのばしょをしていしよう。
-</section>
-
-<section>
-ばしょのつぎに0とくわえると、せんをけせるよ。
-<div class=ichigojam>DRAW 1,1,70,70,0</div>
-うえのほうのもじがきえたかな？
-</section>
-
-<section>
-FORコマンドでくりかえしせんをかこう！
-<div class=ichigojam>10 FOR I=1TO11 STEP 3:DRAW I,1,I*10,70:NEXT
+<a href="./CHR.html">もじのしょうたい</a>がわかったら
+もじをべつのもじにかえてあそんでみよう
+<div class=ichigojam>10 S="IchigoJam"
+40 ?STR$(S)</div>
+RUNでじっこうしても、もとの IchigoJam がひょうじされるだけだね。<br>
+「もじこーど」をいじって、べつのもじにかえちゃおう。
+<div class=ichigojam>20 K=1
+30 FOR I=0 TO LEN(S)-1:?CHR$(ASC(S+I)+K);:NEXT:?
 </div>
-RUNでじっこうしてみると、どうなるかな？
+JdijhpKbn とひょうじされたかな？<br>
+IchigoJam が JdijhpKbn にあんごうかされたね。
 </section>
 
 <section>
-FORコマンドをふたつかいて＃をかいてみよう！
-<div class=ichigojam>10 FOR I=1TO10 STEP 3:DRAW I*10,1,10*I,70:NEXT
-20 FOR I=2TO8 STEP 3:DRAW 1,I*5,70,I*5:NEXT</div>
+20ぎょうめの K のすうじをかえるとちがうあんごうになるよ。<br>
+このすうじがあんごうの「かぎ」だね。ひみつにしておこう。
+<div class=ichigojam>20 K=150</div>
+なぞのあんごうになったかな？
+</section>
+
+<section>
+あんごうかされたもじをもとにもどしてみよう。
+<div class=ichigojam>10 S="JdijhpKbn"
+20 K=1
+30 FOR I=0 TO LEN(S)-1:?CHR$(ASC(S+I)-K);:NEXT:?
+</div>
+IchigoJam にもどったかな？
+</section>
+
+<section>
+30ぎょうめの K のけいさんをべつのものにかえるとどうなるかな？
+<div class=ichigojam>30 FOR I=0 TO LEN(S)-1:?CHR$(ASC(S+I)^K);:NEXT:?
+</div>
 </section>
 
 <section>
 <b>やってみよう！</b><br>
-1. STEPのかずをもっとちいさくしてみるとどうなるかな？<br>
-2. DRAWのI*のよこのかずをかえてみよう<br>
-3. くふうしてもじやえをかいてみよう！<br>
+1. もとにもどすプログラムをともだちにわたしてあんごうでおはなししてみよう<br>
+2. うまくもとにもどらないことがあるよね。どうしたらいいかな？<br>
+3. あんごうかと もとにもどすプログラムをおなじプログラムにすることはできるかな？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
