--- a/ja/index.html
+++ b/ja/index.html
@@ -47,6 +47,7 @@ body {
 - <a href=LOGIC.html>1たす1は1、ろんりのなぞ</a><br>
 - <a href=LRUN.html>プログラムをつなげる LRUN</a><br>
 - <a href=CHR.html>もじのしょうたい CHR$/ASC</a><br>
+- <a href=CRYPTOGRAPHY.html>ひみつのあんごうをつくってみよう</a></br>
 - <a href=DRAW.html>がめんにいたずらしてみよう DRAW</a><br>
 - <a href=DRAWFLOWER.html>はすのはなをえがこう SIN/COS</a><br>
 </section>
