改行を一つ、index追加、ファイル名前大文字に変更
Chrome/MacではA5ページから溢れたので改行一つ削除

--- a/ja/index.html
+++ b/ja/index.html
@@ -21,7 +21,6 @@ body {
 
 <h1>IchigoJam プリント</h1>
 
-<a href=littlehacker.html>テスト TEST</a><br>
 <div id="main">
 <section>
 プログラミング コース<br>
@@ -110,6 +109,7 @@ body {
 - <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
 - <a href=WHATDAY.html>なんようびうまれ？</a><br>
 - <a href=FLOPPY.html>FLOPPY BIRD GAME</a><br>
+- <a href=LITTLEHACKER.html>数字の滝でハッカー気分</a><br>
 </section>
 </div>
 
