--- a/ja/littlehacker.html
+++ b/ja/littlehacker.html
@@ -12,7 +12,7 @@
 もっと数字が欲しいので、もう一行かいていこう<br>
  <div class=ichigojam>1 PRINT 1
 2 PRINT 2</div><br>
-しかし、こう書いてしまうとすぐに2つめが表示されてしまう。滝ように流れてるとはいえない。<br>
+しかし、こう書いてしまうとすぐに2つめが表示されてしまう。滝ように流れてるとはいえない。
 と、いうわけでちょっと待ってもらおう。
 </section>
     
