--- a/ja/index.html
+++ b/ja/index.html
@@ -120,6 +120,7 @@ body {
 - <a href=TENKI.html>明日天気になあれ</a><br>
 - <a href=LETTER.html>思いを伝えてみよう！</a><br>
 - <a href=LITTLEHACKER.html>数字の滝でハッカー気分</a><br>
+- <a href=BATOROWA.html>たいせん、ばとろわゲーム</a><br>
 </section>
 </div>
 
