--- a/ja/index.html
+++ b/ja/index.html
@@ -116,7 +116,7 @@ body {
 - <a href=NUMTYPE.html>すうじタイピングゲーム</a><br>
 - <a href=WHATDAY.html>なんようびうまれ？</a><br>
 - <a href=CRYPTOGRAPHY.html>ひみつのあんごうをつくってみよう</a></br>
-- <a href=ONITIMEPAD.html>さいきょうのあんごうワンタイムパッド</a></br>
+- <a href=ONETIMEPAD.html>さいきょうのあんごうワンタイムパッド</a></br>
 - <a href=FLOPPY.html>FLOPPY BIRD GAME</a><br>
 - <a href=TENKI.html>明日天気になあれ</a><br>
 - <a href=LETTER.html>思いを伝えてみよう！</a><br>
