サイズ調整

--- a/ja/DH.html
+++ b/ja/DH.html
@@ -16,11 +16,9 @@
 </section>
 
 <section>
-まずはとくべつなすうじをじゅんびしよう。
+まずはとくべつなすうじをじゅんびしよう。ひとつえらんでつかうよ。
 <div class="ichigojam">10 LET[0],53,59,61,67,83
-</div>
-このなかからひとつえらんでつかうよ。
-<div class="ichigojam">20 FOR I=0 TO 4:?[I];" ";:NEXT:? 
+20 FOR I=0 TO 4:?[I];" ";:NEXT:? 
 30 INPUT"P=? ",P
 </div>
 つぎはじぶんだけのひみつのすうじをにゅうりょく。
@@ -42,14 +40,14 @@
 このすうじはほかのひとにしられてもだいじょうぶだよ。
 <div class="ichigojam">70 ?"ﾜﾀｽｽｳｼﾞ ";K
 </div>
-おなじプログラムでけいさんした、あいてからうけとったすうじをにゅうりょく。<br>
+おなじプログラムでけいさんした、あいてからうけとったすうじをいれる。<br>
 このときのあいてとは、おなじ P をつかってね。
 <div class="ichigojam">100 INPUT"ｳｹﾄｯﾀｽｳｼﾞ? ",K
 110 GSB@CALC
 120 ?"ｶｷﾞﾉｽｳｼﾞ ";K
 130 END
 </div>
-でてきたすうじがあいてとおなじになっているよね！<br>
+でてきたすうじはあいてとおなじになっているよね！<br>
 このすうじを「かぎ」としてつかおう！
 </section>
 
@@ -57,10 +55,10 @@
 <b>やってみよう！</b><br>
 1. ひみつのすうじをいろいろとかえてためしてみよう<br>
 2. けいさんぶぶんの % というけいさんはどんなけいさんかな？しらべてみよう<br>
-3. とくべつなすうじは「そすう」というかずだよ。どんなとくちょうがあるかな？<br>
+3. とくべつなすうじは「そすう」というよ。どんなとくちょうがあるかな？<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="http://ichigojam.net/print/">IchigoJamプリント</a> http://ichigojam.net/print/ 
-<a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>    
+<a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a></div>
 </body>
 </html>
