--- a/ja/index.html
+++ b/ja/index.html
@@ -64,6 +64,7 @@ body {
 - <a href=FRACTION2.html#kana>ぶんすうのかけざん</a>（<a href=FRACTION2.html>分数のかけ算</a>）<br>
 - <a href=FIB.html>フィボナッチすうれつ</a><br>
 - <a href=HAJIKI.html>はやさ・じかん・きょりをけいさん</a><br>
+- <a href=ANGLE.html#kana>かくどとたかくけい</a>（<a href=ANGLE.html>角度と多角形</a>）<br>
 </section>
 
 <section>
