--- a/ja/FLOPPY.html
+++ b/ja/FLOPPY.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>FLLOPY BIRD</title>
+<title>FLOPPY BIRD</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>FLLOPY BIRD - IchigoJam</h1>
+<h1>FLOPPY BIRD - IchigoJam</h1>
 
 <section>
-FLLOPY BIRDを作ってみよう
+FLOPPY BIRDを作ってみよう
 </section>
 
 <section>
