--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ body {
 <div id="main">
 - <a href=ja/index.html>IchigoJamプリント (Japanese / 日本語)</a><br>
 - <a href=en/index.html>IchigoJam print (English)</a><br>
+- <a href=fr/index.html>IchigoJam print (French)</a><br>
 - <a href=rw/index.html>IchigoJam print (Rwandan / Kinyarwanda)</a><br>
 - <a href=sw/index.html>IchigoJam print (Swahili)</a><br>
 </div>
