French version for WAIT.html, INPUT.html, PRINT.html, LOCATE.html
French version for WAIT.html, INPUT.html, PRINT.html, LOCATE.html are added. index.html is also updated.

IF, GOTO, SAVE-LOAD-NEW, RUN-LIST files are just created

--- a/fr/index.html
+++ b/fr/index.html
@@ -26,13 +26,13 @@ body {
 Cours de programmation<br>
 - <a href=LED.html>Allumer / LED</a><br>
 - <a href=WAIT.html>Manipuler le Temps / WAIT</a><br>
-- <a href=INPUT.html>Answer in numbers / INPUT</a><br>
-- <a href=PRINT.html>Calculate number / PRINT</a><br>
-- <a href=LOCATE.html>Operate the place / LOCATE</a><br>
-- <a href=IF.html>Let it judge / IF</a><br>
-- <a href=GOTO.html>Make a night signal / GOTO</a><br>
-- <a href=SAVE-LOAD-NEW.html>Save a Program / SAVE-LOAD-NEW</a><br>
-- <a href=RUN-LIST.html>Memory of program / RUN/LIST</a><br>
+- <a href=INPUT.html>Répondre avec Chiffres / INPUT</a><br>
+- <a href=PRINT.html>Faire des Calculs / PRINT</a><br>
+- <a href=LOCATE.html>Exploiter le lieu / LOCATE</a><br>
+- <a href=IF.html>Decider / IF</a><br>
+- <a href=GOTO.html>Faire un signal de nuit/ GOTO</a><br>
+- <a href=SAVE-LOAD-NEW.html>Enregistrer un Programme/ SAVE-LOAD-NEW</a><br>
+- <a href=RUN-LIST.html>La mémoire d'un programme / RUN/LIST</a><br>
 - <a href=BEEP.html>Make Sounds / BEEP</a><br>
 - <a href=PLAY.html>Compose Music / PLAY</a><br>
 - <a href=FOR.html>Multiplication by loop / FOR/NEXT</a><br>
